Release Notes
=============


==== Jena 2.6.0

** Codebase converted to Java 5

Jar changes:
   o Removed antlr-2.7.5.jar (no longer used)
   o Removed concurrent.jar (no longer used)

Deprecation clearance.
   Methods, classes and statics marked deprecated in previous releases have been largely removed.

Reasoners:
   o Extended validity checking for OWL configurations to include 
     datatype range checking that can cope with user datatypes as done for RDFS.
     Places the culprit Triple as the ValidityReport.Report extension value.
   o Removed deprecated reasoners (RDFS1, RDFSExpt, OWLExpt) and associated support.

JenaModelSpec:
   o This long-deprecated vocabulary (which supported the old ModelSpec system)
     has been removed. ModelSpec was replaced by Assembler long ago.

   o some Maker methods that implicitly relied on this vocabulary (but which
     had not been deprecated) have also been removed. This affects GraphMaker,
     SimpleGraphMaker, BaseGraphMaker, and ModelMakerImpl: the methods used
     were getMakerClass, augmentDescription, addDescription, and
     getDescription. These methods were only relevant to uses of the old
     ModelSpec system, which was removed in previous releases.

N3:
   o N3 parser is now the Turtle parser.
     The dialect of N3 that Jena supported (which is quite old) has some idioms that
     are not legal Turtle although they are nowadays not correct N3 either.
   o Turtle writer now speeded up when many namespaces in use.
        
==== Jena 2.5.7

Database layer:
   o Compatibility fixes for PostgreSQL 8.3 (no schema changes)  
   o Compatibility fixes for MS SQL Server 2008 (no schema changes)

ReasonerFactoryAssembler
    o Now takes note of ja:schema properties & binds such a schema
      to the reasoners that the factory produces.

Reasoners:
    o Modified @include processing and Rule.rulesFromURL to support 
      FileManager redirects.
    o Fixed problem withLPTopGoalIterator which caused one extra level