@@ -1,7 +1,7 @@
 /*
   (c) Copyright 2002, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Hewlett-Packard Development Company, LP
   [See end of file]
-  $Id: RDFRDBException.java,v 1.8 2008-12-28 19:32:25 andy_seaborne Exp $
+  $Id: RDFRDBException.java,v 1.9 2009-02-06 11:50:39 andy_seaborne Exp $
 */
 
 package com.hp.hpl.jena.db;
@@ -11,6 +11,8 @@ import com.hp.hpl.jena.shared.*;
 /**
 * Used to signal most errors with RDB access. Updated by kers to
 * switch to using JenaException not the (now deprecated) RDFException.
+*
+* Deprecated for use outside the RDB codebase.
 *
 * @author <a href="mailto:der@hplb.hpl.hp.com">Dave Reynolds</a>
 * @author Chris Dollin <a href="mailto:chris.dollin@hp.com">email</a>
